# attempt

./: .env.example  .gitignore  LICENSE  README.md  config.py  db.py  kostionapi.py  main.py  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml  qa.py
__MACOSX/: ._embedding
embedding/: base.py  discourse.py  tds.py
scraper/: discourse_scraper.py  tds_scraper.py
