[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
]
