[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.3.1",
    "fastapi[standard]>=0.115.12",
    "numpy>=2.3.0",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
]
